Cherry-pick 271213@main (b1f4d8147c3c). https://bugs.webkit.org/show_bug.cgi?id=265000

FontFace with data: URI crashes Worker
    https://bugs.webkit.org/show_bug.cgi?id=265000
    rdar://118546120

    Reviewed by Alex Christensen.

    Make sure to reject the promise when font loading fails in a worker.
    Align implementation with spec on data URL font loading by allowing them.

    * LayoutTests/http/wpt/workers/font-loading-error.any-expected.txt: Added.
    * LayoutTests/http/wpt/workers/font-loading-error.any.html: Added.
    * LayoutTests/http/wpt/workers/font-loading-error.any.js: Added.
    (promise_test.async return):
    (promise_test):
    * LayoutTests/http/wpt/workers/font-loading-error.any.worker-expected.txt: Added.
    * LayoutTests/http/wpt/workers/font-loading-error.any.worker.html: Added.
    * Source/WebCore/dom/DocumentFontLoader.cpp:
    (WebCore::DocumentFontLoader::cachedFont):
    * Source/WebCore/workers/WorkerFontLoadRequest.cpp:
    (WebCore::WorkerFontLoadRequest::load):
    (WebCore::WorkerFontLoadRequest::didFail):

    Canonical link: https://commits.webkit.org/271213@main